--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,5 @@
 /.vs
 /INIMASU_GUI/Python 3_9
 /INIMASU_GUI/Python 3_9 64 Bit
-/array_repository_uris.json
-/vaadin_flow.json
-/access_token.json
+*.json
+*.pyc
